--- a/SimixTeste/Views/Home/Index.cshtml
+++ b/SimixTeste/Views/Home/Index.cshtml
@@ -1,8 +1,58 @@
-﻿@{
+﻿@model List<string>
+
+@{
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+<div class="card col mb-2">
+    <div class="card-body">
+        <p class="text-center">Exercício de lógica</p>
+        <p class="text-center">Para mostrar a sequência de numeros clique no botão abaixo:</p>
+        <form asp-action="Index" class="needs-validation">
+            <div class="text-center">
+
+            <button type="submit" class="btn btn-primary btn-actions-pane-right">Visualizar</button>
+            </div>
+        </form>
+    </div>
 </div>
+
+<div class="card col mb-2">
+    <div class="card-body">
+        <p class="text-left">Legenda: </p>
+
+        <ul class="list-group">
+            <li class="list-group-item d-flex justify-content-between align-items-center">
+                Números divisíveis por 3
+                <span class="badge badge-primary badge-pill"> X </span>
+            </li>
+            <li class="list-group-item d-flex justify-content-between align-items-center">
+                Números divisíveis por 5
+                <span class="badge badge-warning badge-pill"> Y </span>
+            </li>
+            <li class="list-group-item d-flex justify-content-between align-items-center">
+                Números divisíveis por 3 e 5
+                <span class="badge badge-success badge-pill">Z</span>
+            </li>
+        </ul>
+        <br />
+        <p class="text-left">Obs: Sequencia dos numeros estão na horizontal. </p>
+    </div>
+</div>
+
+@if (Model != null)
+{
+    <div class="row">
+        @foreach (var item in Model)
+        {
+            <div class="col-sm-2 mb-2">
+                <div class="card @SimixTeste.Helpers.ColorirCardHelper.Colorir(item.ToString())">
+                    <div class="card-body text-center">
+                        @item.ToString()
+                    </div>
+                </div>
+            </div>
+        }
+    </div>
+}
+
